Here is my personal image site

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container disable">
-        <h2>My Image Editor</h2>
+        <h2>Sammabbyl_D Image Editor</h2>
         <div class="wrapper">
             <div class="editor-panel">
                 <div class="filter">
